Finish top navigation.

--- a/index.html
+++ b/index.html
@@ -13,22 +13,55 @@
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
-    <div class="wrapper">
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-        perspiciatis porro, dicta illum ab excepturi voluptatum animi quis
-        minima quas cupiditate voluptatem, cumque corporis vel facilis
-        voluptates modi impedit unde nemo ducimus ex nobis! Inventore eius
-        fugiat beatae, consequatur quo hic alias blanditiis rerum, id quisquam
-        delectus optio cum! Modi expedita facilis laboriosam quis doloribus,
-        facere est placeat ullam, aliquam culpa corporis temporibus quas
-        provident. Sunt consequatur, est maiores placeat aut facilis quam
-        itaque, autem repellendus aliquid possimus laboriosam eligendi ad illo
-        consequuntur. Perferendis explicabo nesciunt, commodi at doloremque
-        repudiandae harum ipsum asperiores voluptate, sunt sequi accusantium
-        cumque porro velit!
-      </p>
-    </div>
+    <a class="visually-hidden skip" href="#main">Skip to main content</a>
+    <header class="topnav">
+      <h2 class="visually-hidden">Header</h2>
+      <div class="wrapper topnav__wrapper">
+        <a href="/" class="topnav__homelink">
+          <img
+            src="/img/logo-mythos.svg"
+            alt="Mythos homepage"
+            class="topnav__logo"
+            width="128"
+            height="36"
+          />
+        </a>
+        <nav>
+          <ul class="topnav__links">
+            <li class="topnav__item">
+              <a href="" class="topnav__link">Features</a>
+            </li>
+            <li class="topnav__item">
+              <a href="" class="topnav__link">Pricing</a>
+            </li>
+            <li class="topnav__item">
+              <a href="" class="topnav__link">About</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main id="main">
+      <div class="wrapper">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+          perspiciatis porro, dicta illum ab excepturi voluptatum animi quis
+          minima quas cupiditate voluptatem, cumque corporis vel facilis
+          voluptates modi impedit unde nemo ducimus ex nobis! Inventore eius
+          fugiat beatae, consequatur quo hic alias blanditiis rerum, id quisquam
+          delectus optio cum! Modi expedita facilis laboriosam quis doloribus,
+          facere est placeat ullam, aliquam culpa corporis temporibus quas
+          provident. Sunt consequatur, est maiores placeat aut facilis quam
+          itaque, autem repellendus aliquid possimus laboriosam eligendi ad illo
+          consequuntur. Perferendis explicabo nesciunt, commodi at doloremque
+          repudiandae harum ipsum asperiores voluptate, sunt sequi accusantium
+          cumque porro velit!
+        </p>
+      </div>
+    </main>
+    <footer>
+      <h2 class="visually-hidden">Header</h2>
+    </footer>
   </body>
 </html>
