--- a/index.html
+++ b/index.html
@@ -64,23 +64,32 @@
           </div>
         </div>
       </section>
-      <div class="wrapper">
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-          perspiciatis porro, dicta illum ab excepturi voluptatum animi quis
-          minima quas cupiditate voluptatem, cumque corporis vel facilis
-          voluptates modi impedit unde nemo ducimus ex nobis! Inventore eius
-          fugiat beatae, consequatur quo hic alias blanditiis rerum, id quisquam
-          delectus optio cum! Modi expedita facilis laboriosam quis doloribus,
-          facere est placeat ullam, aliquam culpa corporis temporibus quas
-          provident. Sunt consequatur, est maiores placeat aut facilis quam
-          itaque, autem repellendus aliquid possimus laboriosam eligendi ad illo
-          consequuntur. Perferendis explicabo nesciunt, commodi at doloremque
-          repudiandae harum ipsum asperiores voluptate, sunt sequi accusantium
-          cumque porro velit!
-        </p>
-      </div>
+      <section class="features">
+        <h2 class="visually-hidden">Features</h2>
+        <div class="wrapper features__wrapper">
+          <div class="features__item">
+            <img src="/img/icon-asterisk.svg" alt="" class="features__icon" width="43" height="48">
+            <h3 class="features__title">AI-powered matching</h3>
+            <p class="features__description">
+              Phasellus ac mi magna. Sed scelerisque, turpis vitae consequat vehicula, sem turpis pretium tellus, tempor posuere turpis est ac velit.
+            </p>
+          </div>
+          <div class="features__item">
+            <img src="/img/icon-bell.svg" alt="" class="features__icon" width="42" height="48">
+            <h3 class="features__title">Immediate notifications</h3>
+            <p class="features__description">
+              Mauris id vestibulum metus, ut pretium lacus. Phasellus ac mi magna. Sed scelerisque, turpis vitae consequat vehicula, sem turpis pretium tellus, tempor posuere turpis est ac velit.
+            </p>
+          </div>
+          <div class="features__item">
+            <img src="/img/icon-payments.svg" alt="" class="features__icon" width="61" height="48">
+            <h3 class="features__title">Protected payments</h3>
+            <p class="features__description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id vestibulum metus, ut pretium lacus.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <h2 class="visually-hidden">Header</h2>
