--- a/index.html
+++ b/index.html
@@ -68,26 +68,68 @@
         <h2 class="visually-hidden">Features</h2>
         <div class="wrapper features__wrapper">
           <div class="features__item">
-            <img src="/img/icon-asterisk.svg" alt="" class="features__icon" width="43" height="48">
+            <img
+              src="/img/icon-asterisk.svg"
+              alt=""
+              class="features__icon"
+              width="43"
+              height="48"
+            />
             <h3 class="features__title">AI-powered matching</h3>
             <p class="features__description">
-              Phasellus ac mi magna. Sed scelerisque, turpis vitae consequat vehicula, sem turpis pretium tellus, tempor posuere turpis est ac velit.
+              Phasellus ac mi magna. Sed scelerisque, turpis vitae consequat
+              vehicula, sem turpis pretium tellus, tempor posuere turpis est ac
+              velit.
             </p>
           </div>
           <div class="features__item">
-            <img src="/img/icon-bell.svg" alt="" class="features__icon" width="42" height="48">
+            <img
+              src="/img/icon-bell.svg"
+              alt=""
+              class="features__icon"
+              width="42"
+              height="48"
+            />
             <h3 class="features__title">Immediate notifications</h3>
             <p class="features__description">
-              Mauris id vestibulum metus, ut pretium lacus. Phasellus ac mi magna. Sed scelerisque, turpis vitae consequat vehicula, sem turpis pretium tellus, tempor posuere turpis est ac velit.
+              Mauris id vestibulum metus, ut pretium lacus. Phasellus ac mi
+              magna. Sed scelerisque, turpis vitae consequat vehicula, sem
+              turpis pretium tellus, tempor posuere turpis est ac velit.
             </p>
           </div>
           <div class="features__item">
-            <img src="/img/icon-payments.svg" alt="" class="features__icon" width="61" height="48">
+            <img
+              src="/img/icon-payments.svg"
+              alt=""
+              class="features__icon"
+              width="61"
+              height="48"
+            />
             <h3 class="features__title">Protected payments</h3>
             <p class="features__description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id vestibulum metus, ut pretium lacus.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id
+              vestibulum metus, ut pretium lacus.
             </p>
           </div>
+        </div>
+      </section>
+      <section class="fw-feature">
+        <div class="wrapper fw-feature__wrapper">
+          <h2 class="fw-feature__title">
+            Angel investment matching in real time.
+          </h2>
+          <p class="fw-feature__description medium">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id
+            vestibulum metus, ut pretium lacus. Phasellus ac mi magna. Sed
+            scelerisque, turpis vitae.
+          </p>
+          <img
+            src="/img/laptop-dashboard.svg"
+            alt="laptop showing a dashboard on the screen"
+            class="fw-feature__image"
+            width="792"
+            height="465"
+          />
         </div>
       </section>
     </main>
