--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
           </div>
         </div>
       </section>
-      <section class="fw-feature">
-        <div class="wrapper fw-feature__wrapper">
-          <h2 class="fw-feature__title">
+      <section class="fw-feature fullwidth">
+        <div class="wrapper fw-feature__wrapper fullwidth__wrapper">
+          <h2 class="fw-feature__title fullwidth__title">
             Angel investment matching in real time.
           </h2>
-          <p class="fw-feature__description medium">
+          <p class="fw-feature__description fullwidth__description medium">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id
             vestibulum metus, ut pretium lacus. Phasellus ac mi magna. Sed
             scelerisque, turpis vitae.
@@ -161,11 +161,20 @@
                 height="120"
               />
               <p class="testimonial__author-description">
-              Janice Hsu<br/>
-              Founder and CEO, Evermindly
+                Janice Hsu<br />
+                Founder and CEO, Evermindly
               </p>
             </figcaption>
           </figure>
+        </div>
+      </section>
+      <section class="fw-cta fullwidth">
+        <div class="wrapper fw-cta__wrapper fullwidth__wrapper">
+          <h2 class="fw-cta__title fullwidth__title">Get started with Mythos today</h2>
+          <p class="fw-cta__description fullwidth__description large">
+            Find the next undiscovered unicorn with a free 14-day trial.
+          </p>
+          <a href="" class="button primary white fw-cta__button">Free Trial </a>
         </div>
       </section>
     </main>
